@@ -282,6 +282,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|core
+operator|.
+name|SolrInfoMBean
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|HdfsUtil
@@ -1392,6 +1406,26 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|// initialize metrics
+name|core
+operator|.
+name|getCoreMetricManager
+argument_list|()
+operator|.
+name|registerMetricProducer
+argument_list|(
+name|SolrInfoMBean
+operator|.
+name|Category
+operator|.
+name|TLOG
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|this
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
